<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="30sp"
    android:gravity="center"
    android:text="@string/submit_id"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="40sp"
        android:textColor="#c93636"
        android:text="@string/click_next"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_photo_back"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/go_back"
            android:textSize="30sp"
            android:layout_margin="40dp"
            android:textColor="@color/white"
            android:background="@color/FaceColor"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_photo_submit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/submit"
            android:textSize="30sp"
            android:layout_margin="40dp"
            android:textColor="@color/white"
            android:background="@color/FaceColor"
            android:gravity="center"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
