<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<TextView

    android:text="@string/version_update"
    android:textColor="@color/white"
    android:background="@color/FaceColor"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="5dp"
    android:textSize="30dp"/>
    <TextView
        android:layout_margin="30dp"
        android:text="@string/msg_update"
        android:layout_width="match_parent"
        android:textSize="25dp"
        android:textColor="@color/FaceColor"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_update_cancel"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/cancel"
            android:textSize="25sp"
            android:layout_margin="20dp"
            android:textColor="@color/white"
            android:background="@drawable/button_touch_bg"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_update_submit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/submit"
            android:textSize="25sp"
            android:layout_margin="20dp"
            android:textColor="@color/white"
            android:background="@drawable/button_touch_bg"
            android:gravity="center"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
