<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:gravity="right"
    android:background="@color/FaceColor"
    >

    <Button
        android:id="@+id/btn_menu_config"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/FaceColor"
        android:drawableLeft="@mipmap/config"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:drawablePadding="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="60dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/menu_config"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        />
    <Button
        android:id="@+id/btn_menu_butt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/FaceColor"
        android:drawableLeft="@mipmap/butt"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:drawablePadding="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="60dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="对接"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        />
    <Button
        android:id="@+id/btn_menu_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/FaceColor"
        android:drawableLeft="@mipmap/search"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:drawablePadding="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="60dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/menu_search"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        />
    <Button
        android:id="@+id/btn_menu_update"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/FaceColor"
        android:drawableLeft="@mipmap/update"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="1dp"
        android:drawablePadding="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="60dp"
        android:text="@string/menu_update"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        />

    <Button
        android:id="@+id/btn_menu_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/FaceColor"
        android:drawableLeft="@mipmap/introduce"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="1dp"
        android:drawablePadding="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="60dp"
        android:text="@string/menu_info"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        />
</LinearLayout>